fix layout breaking if title of issue or post is too long
http://yobi.navercorp.com/dlab/hive/issue/595

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2562,12 +2562,9 @@
 .board-header {
     display:block;
     clear:both;
-    height:30px;
-    padding: 10px 20px;
     border:none;
-    background-color:@yobi-white-dark;
-    .border-radius(10px);
     margin:15px 0;
+
     .board-id {
         font-size:14px;
         padding-right: 10px;
@@ -2577,6 +2574,10 @@
         font-size: 18px;
         line-height: 30px;
         color: #000;
+        padding: 10px 20px;
+        background-color:@yobi-white-dark;
+        word-break:break-all;
+        .border-radius(10px);
     }
     .date {
         display:inline-block;
